# jina-reranker-v3-api

./: .env.example  .gitignore  Dockerfile  Dockerfile.blackwell  README.md  docker-compose.blackwell.yml  docker-compose.multi.yml  docker-compose.yml  jina-reranker-v3.md  pyproject.toml
app/: config.py  main.py  model.py
context/docs/: api.md  jina-reranker-v3-0-6b-listwise-reranker-for-sota-multilingual-retrieval.md
context/jina-reranker-v3-api-dev/journal/2026-04-19/: 1537-initial-setup.md  1549-multi-instance-setup.md
context/jina-reranker-v3-api-dev/journal/2026-04-21/: 1825-blackwell-gpu-support.md
nginx/: nginx.conf
scripts/: test_rerank.sh
tests/: test_api.py
